fixed the form overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,15 @@
   margin:0;
   padding:0;
   box-sizing: border-box;
+  -ms-overflow-style: none;  
+  scrollbar-width: none;  
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
 body {
   --slack-color: #3f0f40;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
